Changed our data description into a table and renamed table numbers

--- a/7-group-project-final.ipynb
+++ b/7-group-project-final.ipynb
@@ -37,10 +37,20 @@
    "source": [
     "In the player.csv data set, each row in the dataset represents a unique player and includes variables related to gameplay behaviour and personal characteristics. For this project, we focus exclusively on player data, as the response variable of interest (newsletter subscription) is recorded once per individual.\n",
     "The variables we will need for our analysis are:\n",
-    "- Played_hours (dbl): the total amount of time the player spent on the server.\n",
-    "- Experience (chr): a categorical variable describing the player’s experience level.\n",
-    "- Subscribe (lgl): a binary variable indicating whether the player subscribed to the game-related newsletter.\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    " **Table 1: A table carrying the description of the Variables we will be using:**\n",
+    " \n",
+    "|  **Variable Name**    |**Variable Type** |          **Variable Description**               |\n",
+    "|:---------------------: |:---------------:|:-------------------------------:|\n",
+    "|      played_hours     |dbl| The total amount of time the player spent on the server. |\n",
+    "|      experience       |chr |A categorical variable describing the player’s experience level. |\n",
+    "|      subscribe        |lgl |A binary variable indicating whether the player subscribed to the game-related newsletter. |\n",
     "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
     "All analyses were conducted using R, with packages from the tidyverse and tidymodels collections.\n"
    ]
   },
